# jani_env

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockfile  Makefile  README_TRAINING.md  example_training.py  jani.py  jani_env.py  note  oracle.py  requirements_training.txt  sac_tuning_best_params.txt  simulation.csv  simulation.py  simulation_results.csv  test.ipynb  test_constraints_generator.py  test_jani.py  test_jani_env.py  test_oracle_final.py  test_oracle_simple.py  train.py  train_base.py  train_comprehensive.py  train_simple.py  training_base.py  update_tests.py
callbacks/: __init__.py
classifier/: __init__.py  config.py  data_loader.py  load_model_example.py  models.py  train.py  utils.py
classifier/trainer/: __init__.py  comparison.py  data_loader.py  gpu_scheduler.py  hyperparameter_tuning.py  test_summary.py  trainer.py
cluster_utils/: gen_commands.py  gen_commands_htcondor_dagger.py  gen_commands_htcondor_dagger.sh  gen_commands_htcondor_iql.py  gen_commands_htcondor_iql.sh  gen_commands_htcondor_offlinerl.py  gen_commands_htcondor_offlinerl.sh  gen_commands_htcondor_ppo.py  gen_commands_htcondor_recrl.py  gen_commands_htcondor_recrl.sh  gen_commands_htcondor_sample.py  gen_commands_htcondor_sample.sh  gen_commands_slurm_dagger.py
cluster_utils/bouncing_ball/networks/bouncing_ball_0.01_0.01/: bouncing_ball_0.01_0.01_16_16.jani2nnet  bouncing_ball_0.01_0.01_32_32.jani2nnet  bouncing_ball_0.01_0.01_64_64.jani2nnet
cluster_utils/bouncing_ball/networks/bouncing_ball_0.05_0.05/: bouncing_ball_0.05_0.05_16_16.jani2nnet  bouncing_ball_0.05_0.05_32_32.jani2nnet  bouncing_ball_0.05_0.05_64_64.jani2nnet
cluster_utils/bouncing_ball/networks/bouncing_ball_0.1_0.1/: bouncing_ball_0.1_0.1_16_16.jani2nnet  bouncing_ball_0.1_0.1_32_32.jani2nnet  bouncing_ball_0.1_0.1_64_64.jani2nnet
cluster_utils/bouncing_ball/networks/bouncing_ball_0.2_0.2/: bouncing_ball_0.2_0.2_16_16.jani2nnet  bouncing_ball_0.2_0.2_32_32.jani2nnet  bouncing_ball_0.2_0.2_64_64.jani2nnet
dagger/: buffer.py  policy.py  ray_scheduler.py  ray_worker.py  ray_workers.py  rollout_collector.py  train.py  training_scheduler.py
dqn/: __init__.py  model.py  train.py
examples/: objective.jani  simple_failure.jani  simple_goal.jani  simple_start.jani  simple_test.jani  start.jani  start_compact.jani
examples/bouncing_ball/: bouncing_ball.jani  safe.jani
examples/inverted_pendulum/: inverted_pendulum.jani  objective.jani  property.jani  safe.jani  start.jani
examples/iql/: trajectories_test.csv
examples/linetrack/: model.jani
examples/mod_linetrack/: mod_linetrack.jani  property.jani
examples/mod_linetrack_17_10_icy_park/: model.prism
examples/mod_linetrack_40_25/: best_model.pth
examples/mod_linetrack_icy_park/: model.jani  property.jani
examples/one_way_line_15_10/: model.jani
examples/one_way_line_15_10/jani_training_20260121_151628/: final_actor.pth
examples/one_way_line_15_10/jani_training_20260123_151950/: check_keys.py  final_actor.pth
examples/one_way_line_15_10/policy/: final_actor.pth
examples/two_way_line_15_10/: final_actor.pth  model.jani
examples/two_way_line_15_10/jani_training_20260121_140715/: final_actor.pth
gcsl/: __init__.py  buffer.py  model.py  train.py  utils.py
jani/: __init__.py  core.py  env.py  environment.py  expressions.py  generator.py  oracle.py  run_oracle.py  torchrl_env.py
jani/engine/: CMakeLists.txt  backend.cpp  base_components.h  engine.h  expressions.h
jani/engine/debug/: oracle_debug.cpp
jani/engine/src/: base_components.h  engine.cpp  engine.h  expressions.cpp  expressions.h  main.cpp  oracle.cpp  oracle.h
jani/engine/test/: unittest_automaton.cpp  unittest_engine.cpp  unittest_expr.cpp  unittest_oracle.cpp
jani/test/: unittest_beckend.py
logs/: README_TESTS.md
mask_ppo/: __init__.py  callbacks.py  torchrl_train.py  train.py  training_scheduler.py
offline_rl/: SAFETY_AWARE_IQL.md  SAFETY_AWARE_IQL_FIXES.md  __init__.py  advantage_diagnostic.py  iql.py  load_dataset.py  loss.py  models.py  sample.py  trajectories.py
recovery_rl/: actor.py  sac.py  train.py  tune_sac.py  utils.py
rl/: __init__.py  buffer.py  callbacks.py  evaluation.py  simulation.py  train.py  train_base.py
sac/: train.py  tune.py
tests/: test_constraints_generator.py  test_jani.py  test_jani_env.py  test_oracle_final.py  test_oracle_simple.py  test_torchrl_env.py
utils/: __init__.py
(+27 files in other folders)
